[package]
name = "ironshield"
description = "Snagging this name before anyone else does"
license = "Apache-2.0"
version = "0.2.0"
edition = "2024"
authors = ["IronShield Developers <software@ironshield.cloud>"]
readme = "README-crates.md"
repository = "https://github.com/IronShield-Tech/ironshield-rs"
keywords = ["proof-of-work", "pow", "ddos", "crypto", "library"]
categories = ["cryptography", "algorithms", "concurrency"]

[features]
default = ["parallel"]
parallel = ["ironshield-core/parallel"]

[dependencies]
ironshield-core = { version = "0.3", features = ["parallel"] }
ironshield-types = { version = "0.2" }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.20.0"

# Aggressive release profile optimized for performance
[profile.release]
lto = true               # Link Time Optimization - enables cross-crate inlining
opt-level = 3            # Optimize for maximum performance
strip = true             # Strip debug symbols for smaller binary
codegen-units = 1        # Single codegen unit for maximum optimization opportunities
panic = "abort"          # Aborting instead of unwinding results in a much smaller and performant binary
