[package]
name = "ironshield"
description = "Snagging this name before anyone else does"
license = "Apache-2.0"
version = "0.2.22"
edition = "2024"
authors = ["IronShield Developers <software@ironshield.cloud>"]
readme = "README-crates.md"
repository = "https://github.com/IronShield-Tech/ironshield-rs"
keywords = ["proof-of-work", "pow", "ddos", "crypto", "library"]
categories = ["cryptography", "algorithms", "concurrency"]

[features]
toml = ["dep:toml"]

[dependencies]
ironshield-core = { version = "0.3", path = "../core" }
ironshield-types = { version = "0.2", path = "../types" }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = { version = "0.9.2", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
num_cpus = "1.16"
axum = "0.8.4"
http = "1.3.1"

[dev-dependencies]
tempfile = "3.20.0"


[profile.release]
# Aggressive release profile optimized for performance
lto = true              
opt-level = 3           
strip = true            
codegen-units = 1       
panic = "abort"         
